# vidsum

./: .gitignore  BUILD_LOG.md  DECISIONS.md  PLAN.md  README.md  ROADMAP.md  profile.example.md  pyproject.toml
src/vidsum/: __init__.py  captions.py  chunk.py  cli.py  config.py  download.py  observability.py  onboard.py  output.py  pipeline.py  profile.py  profile_builder.py  refine.py  transcribe.py  types.py
src/vidsum/backends/: __init__.py  cloud.py  local.py  openai.py
src/vidsum/prompts/: __init__.py  build_profile.md  expand.md  refine_chunk.md  summarize.md
tests/: test_captions.py  test_cli_onboarding.py  test_llm_requests.py  test_pipeline_captions.py  test_profile_init.py  test_smoke.py
