[project]
name = "vidsum"
version = "0.1.0"
description = "Standalone CLI for summarising long-form video and audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.0",
    "faster-whisper>=1.0.3",
    "ollama>=0.4.0",
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "tiktoken>=0.8.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
]

[project.scripts]
vidsum = "vidsum.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
